--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,33 @@ p {
   margin-top: 10px;
 }
 
+a {
+  height: 50px;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 1.5em;
+  color: salmon;
+  text-decoration: none;
+}
+
 h1 {
     padding-left: 10px;
     font-family: 'Gloria Hallelujah', cursive;
     color: salmon;
+}
+
+h1:hover {
+  color: teal;
+}
+
+.glyphicon {
+  font-size: 20px;
+  color: salmon;
+}
+
+.glyphicon:hover{
+  -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
 }
 
 #pageContainer {
@@ -43,6 +66,7 @@ h1 {
   background-color: salmon;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #bootsy {
@@ -71,9 +95,16 @@ h1 {
 
 #foot {
   height: 50px;
+  background-color: teal;
+}
+
+.purp {
+  height: 50px;
   background-color: purple;
 }
 
 #copyright {
+  font-size: 2em;
   color: salmon;
+  padding-top: 10px;
 }
